...
    <string name="preview">Preview</string>
    <string name="revenue">Revenue</string>
    <string name="expenses">Expenses</string>
    <string name="tickets">Tickets</string>
    <string name="undo">Undo</string>
    <string name="sign_in_to_continue">Sign in to continue.</string>
    <string name="about">About</string>
    <string name="app">App</string>
    <string name="fork_on_github">Fork it on GitHub</string>
    <string name="made_by">Made by</string>
    <string name="cristal_diplan" translatable="false">Cristal Diplan</string>
    <string name="christian_v_squez" translatable="false">Christian Vásquez</string>
    <string name="not_recover">You will not be able to recover this cuadre.</string>
    <string name="edit">Edit</string>
    <string name="nothing_to_see_here">Nothing to see here</string>
    <string name="tap_the_plus_button_to_start">Tap on the + button to start</string>
    <string name="url_github">https://github.com/chrisvasqm/cuadramo</string>
    <string name="url_profile_chris">https://github.com/chrisvasqm</string>
    <string name="url_profile_carla">https://www.behance.net/hipandac</string>
</resources>
...
